--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
     </header>
 
     <section class="hero">
-        <h2>Innovating Compassionate Robotics</h2>
-        <p>Building robots with empathy and intelligence to make the world a better place. Join us in shaping the future of technology.</p>
+        <h2>Airo The Compassionate Robot</h2>
+        <p>Building robots with empathy and intelligence to make the world a better place, </p>
         <a href="#learn-more">Learn More</a>
     </section>
 
@@ -155,7 +155,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Airo. Designed with <span style="color: red;">&hearts;</span> by Alex Rose. <a href="#privacy">Privacy Policy</a></p>
+        <p>&copy; 2024 CompassionAI Designed with <span style="color: red;">&hearts;</span> by Alex Rose. <a href="#privacy">Privacy Policy</a></p>
     </footer>
 </body>
 </html>
