--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <h3>Recent Releases</h3>
         <div class="card">
             <img src="project1.jpg" alt="Project A">
-            <h4>Project Compassion</h4>
+            <h4>AirOS</h4>
             <p>A groundbreaking step in empathetic AI development.</p>
         </div>
         <div class="card">
